Changement de brevo

--- a/.env
+++ b/.env
@@ -34,5 +34,5 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://Marco.clin@lyc-bonaparte.fr:6wFQsOBtdnqZXy9p@smtp-relay.brevo.com:587
+MAILER_DSN=smtp://matthis.doney@gmail.com:q8sRVzm2OHCUtpkd@smtp-relay.brevo.com:587
 ###< symfony/mailer ###
