--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,7 +39,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/ajout, roles: ROLE_ADMIN }
+         - { path: ^/ajout, roles: [ROLE_ADMIN,ROLE_USER] }
+         - { path: ^/modifier, roles: [ROLE_ADMIN,ROLE_USER] }
         # - { path: ^/accueil, roles: ROLE_USER }
 
 when@test:
